--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+
 a {
   @apply underline transition hover:text-lime-700 dark:hover:text-lime-200 text-lime-500 dark:text-lime-400;
 }
